--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "node-picamera": "0.0.1",
     "pi-camera-connect": "^0.2.0"
   },
   "repository": {
